--- a/JSON2DF.ipynb
+++ b/JSON2DF.ipynb
@@ -81,7 +81,7 @@
         "colab_type": "text"
       },
       "source": [
-        "All JSON files located here: https://drive.google.com/drive/folders/1O3q6C6gzfQo-X4ZoDVpPE8-r4l5766gt?usp=sharing"
+        "All JSON files downloaded from the official API"
       ]
     },
     {
